# Kindle-Sudoku

./: .gitignore  README.md  build-kindlehf.sh  build-local.sh  config.xml  engine_smoke.cpp  game_state.h  meson.build  meson.options
.github/workflows/: main.yml
cross/: kindlehf.txt
docs/: ARCHITECTURE.md
extension/: config.xml  menu.json
scripts/: build-kindlehf.sh
src/: game_state.cpp  game_state.h  main.cpp  ui.cpp  ui.h
tests/: engine_smoke.cpp
workflows/: main.yml
